<resources>
    <string name="app_name">mobieapp</string>
    <string name="app_intro">im smart </string>
    <string name="username">Enter Username </string>
    <string name="password">Enter Password </string>
    <string name="email">Enter Email </string>
    <string name="Registor">Registor </string>
    <string name="name">Enter Name </string>
    <string name="back">Go back </string>
    <string name="datePick">Pick a Date </string>
    <string name="me">Taddesse, Abenezer 4/12/2021 </string>
    <string name="profile">Your Profile </string>
    <string name="matchtitle">Your Matches</string>
    <string name="settings">SETTINGS</string>
    <string name="reminder_title">Set Match Reminder Time (24hrs)</string>
    <string name="setingtime">Time</string>
    <string name="max_distance">Set Max Distance (mi)</string>
    <string name="max_dest_hint">Ex.5</string>
    <string name="max_age_v">Set Max Age</string>
    <string name="min_age_v">Set Min Age</string>
    <string name="private_set">Private Account</string>
    <string name="max_age_hint">Ex. 45</string>
    <string name="save">Save</string>
    <string name="min_age_hint">Ex. 18</string>
    <string name="gender_v">Gender</string>
    <string-array name="time_arrays">

    <item>0:00</item>
    <item>1:00</item>
    <item>2:00</item>
    <item>3:00</item>
    <item>4:00</item>
    <item>5:00</item>
    <item>6:00</item>
    <item>7:00</item>
    <item>8:00</item>
    <item>9:00</item>
    <item>10:00</item>
    <item>11:00</item>
    <item>12:00</item>
    <item>13:00</item>
    <item>14:00</item>
    <item>15:00</item>
    <item>16:00</item>
    <item>17:00</item>
    <item>18:00</item>
    <item>19:00</item>
    <item>20:00</item>
    <item>21:00</item>
    <item>22:00</item>
    <item>23:00</item>
    </string-array>
    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
    </string-array>
    <string-array name="m_dist_array">
        <item>5</item>
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <string-array name="agesArrays">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>40+</item>
    </string-array>
    <string name="allow_location">Enable location</string>
    <string name="location_message">Enable location</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Location Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>